tareaFor/tareaFor.jj
options {
  STATIC = false;
}

PARSER_BEGIN(tareaFor)
public class tareaFor {
  public static void main(String[] args) throws Exception {
    java.util.Scanner sc = new java.util.Scanner(System.in);
    while (sc.hasNextLine()) {
      String linea = sc.nextLine().trim();
      if (linea.isEmpty()) continue;
      System.out.print(linea + " >>> ");
      try {
        tareaFor parser = new tareaFor(new java.io.StringReader(linea));
        parser.For();
        System.out.println("ACEPTADO");
      } catch (ParseException e) {
        System.out.println("NO ACEPTADO");
      } catch (TokenMgrError e) {
        System.out.println("NO ACEPTADO");
      }
    }
  }
}
PARSER_END(tareaFor)

SKIP : { " " | "\t" | "\n" | "\r" }

TOKEN : { < FOR    : "for" > }
TOKEN : { < LPAREN : "(" > }
TOKEN : { < RPAREN : ")" > }
TOKEN : { < COMA   : "," > }
TOKEN : { < MAS    : "+" > }
TOKEN : { < COEFICIENTE : (["0"-"9"])+ > }
TOKEN : { < VARIABLE     : (["a"-"z","A"-"Z"])+ > }

// <for> ::= FOR ( <argumentos> )
void For() :
{}
{
  <FOR> <LPAREN> argumentos() <RPAREN> <EOF>
}



// <argumentos> ::= <fin>   | <inicio> , <fin>  | <inicio> , <fin> , <incremento>


void argumentos() :
{}
{
  expresion() ( <COMA> expresion() ( <COMA> expresion() )? )?
}



// <expresion> ::= <termino> (+ <expresion>)*

void expresion() :
{}
{
  termino() ( <MAS> termino() )*
}



// <termino> ::= <coeficiente> | <variable>


void termino() :
{}
{
  <COEFICIENTE> | <VARIABLE>
}
